app/styles/app.css
/* ... */
@media (min-width: 64em) {
    .article img {
        width: calc(100% + 8rem)
    }
      }
.swimlane{
  display: grid;
  width: 100%;
  scroll-snap-type: x var(--tw-scroll-snap-strictness);
  --tw-scroll-snap-strictness: mandatory;
  scroll-padding-left: 1.5rem;
  scroll-padding-right: 1.5rem;
  grid-auto-flow: column;
  justify-content: flex-start;
  grid-gap: 1rem;
  gap: 1rem;
  overflow-x: scroll;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 1rem;
}
.sr-only{
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}
.pointer-events-none{
  pointer-events: none;
}
.invisible{
  visibility: hidden;
}
.static{
  position: static;
}
.fixed{
  position: fixed;
}
.absolute{
  position: absolute;
}
.relative{
  position: relative;
}
.sticky{
  position: sticky;
}
.inset-0{
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}
.inset-y-0{
  top: 0px;
  bottom: 0px;
}
.bottom-1{
  bottom: 0.25rem;
}
.bottom-12{
  bottom: 3rem;
}
.left-0{
  left: 0px;
}
.right-0{
  right: 0px;
}
.right-1{
  right: 0.25rem;
}
.top-0{
  top: 0px;
}
.top-36{
  top: 9rem;
}
.top-nav{
  top: 3rem;
  top: var(--height-nav);
}
.-z-10{
  z-index: -10;
}
.z-30{
  z-index: 30;
}
.z-40{
  z-index: 40;
}
.z-50{
  z-index: 50;
}
.-m-4{
  margin: -1rem;
}
.m-4{
  margin: 1rem;
}
.mx-6{
  margin-left: 1.5rem;
  margin-right: 1.5rem;
}
.mx-auto{
  margin-left: auto;
  margin-right: auto;
}
.my-24{
  margin-top: 6rem;
  margin-bottom: 6rem;
}
.my-6{
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}
.my-8{
  margin-top: 2rem;
  margin-bottom: 2rem;
}
.mx-8{
  margin-left: 2rem;
  margin-right: 2rem;
}
.-mb-px{
  margin-bottom: -1px;
}
.-mt-nav{
  margin-top: calc(3rem * -1);
  margin-top: calc(var(--height-nav) * -1);
}
.mb-1{
  margin-bottom: 0.25rem;
}
.mb-2{
  margin-bottom: 0.5rem;
}
.mb-24{
  margin-bottom: 6rem;
}
.mb-3{
  margin-bottom: 0.75rem;
}
.mb-4{
  margin-bottom: 1rem;
}
.mb-6{
  margin-bottom: 1.5rem;
}
.ml-2{
  margin-left: 0.5rem;
}
.ml-3{
  margin-left: 0.75rem;
}
.ml-6{
  margin-left: 1.5rem;
}
.mr-3{
  margin-right: 0.75rem;
}
.mr-4{
  margin-right: 1rem;
}
.mt-1{
  margin-top: 0.25rem;
}
.mt-2{
  margin-top: 0.5rem;
}
.mt-3{
  margin-top: 0.75rem;
}
.mt-4{
  margin-top: 1rem;
}
.mt-6{
  margin-top: 1.5rem;
}
.mt-8{
  margin-top: 2rem;
}
.block{
  display: block;
}
.inline-block{
  display: inline-block;
}
.inline{
  display: inline;
}
.flex{
  display: flex;
}
.table{
  display: table;
}
.grid{
  display: grid;
}
.hidden{
  display: none;
}
.aspect-\[3\/2\]{
  aspect-ratio: 3/2;
}
.aspect-\[3\/4\]{
  aspect-ratio: 3/4;
}
.aspect-\[4\/5\]{
  aspect-ratio: 4/5;
}
.aspect-square{
  aspect-ratio: 1 / 1;
}
.h-10{
  height: 2.5rem;
}
.h-24{
  height: 6rem;
}
.h-3{
  height: 0.75rem;
}
.h-32{
  height: 8rem;
}
.h-4{
  height: 1rem;
}
.h-48{
  height: 12rem;
}
.h-5{
  height: 1.25rem;
}
.h-8{
  height: 2rem;
}
.h-fit{
  height: -moz-fit-content;
  height: fit-content;
}
.h-full{
  height: 100%;
}
.h-nav{
  height: 3rem;
  height: var(--height-nav);
}
.h-screen{
  height: 100vh;
  height: var(--screen-height, 100vh);
}
.h-screen-dynamic{
  height: 100vh;
  height: var(--screen-height-dynamic, 100vh);
}
.h-screen-no-nav{
  height: calc(100vh - 3rem);
  height: calc(var(--screen-height, 100vh) - var(--height-nav));
}
.max-h-0{
  max-height: 0px;
}
.max-h-36{
  max-height: 9rem;
}
.max-h-48{
  max-height: 12rem;
}
.max-h-full{
  max-height: 100%;
}
.min-h-\[25rem\]{
  min-height: 25rem;
}
.min-h-full{
  min-height: 100%;
}
.min-h-screen{
  min-height: 100vh;
}
.w-10{
  width: 2.5rem;
}
.w-24{
  width: 6rem;
}
.w-32{
  width: 8rem;
}
.w-48{
  width: 12rem;
}
.w-5{
  width: 1.25rem;
}
.w-8{
  width: 2rem;
}
.w-80{
  width: 20rem;
}
.w-auto{
  width: auto;
}
.w-full{
  width: 100%;
}
.w-mobileGallery{
  width: calc(100vw - 3rem);
}
.w-screen{
  width: 100vw;
}
.min-w-\[0\.75rem\]{
  min-width: 0.75rem;
}
.min-w-\[4rem\]{
  min-width: 4rem;
}
.min-w-full{
  min-width: 100%;
}
.max-w-0{
  max-width: 0rem;
}
.max-w-7xl{
  max-width: 80rem;
}
.max-w-full{
  max-width: 100%;
}
.max-w-lg{
  max-width: 32rem;
}
.max-w-md{
  max-width: 28rem;
}
.max-w-prose{
  max-width: 65ch;
}
.max-w-prose-narrow{
  max-width: 45ch;
}
.max-w-prose-wide{
  max-width: 80ch;
}
.max-w-screen-xl{
  max-width: 80em;
}
.max-w-xl{
  max-width: 36rem;
}
.flex-1{
  flex: 1 1 0%;
}
.flex-shrink{
  flex-shrink: 1;
}
.flex-grow{
  flex-grow: 1;
}
.-translate-x-full{
  --tw-translate-x: -100%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.translate-x-0{
  --tw-translate-x: 0px;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.translate-x-full{
  --tw-translate-x: 100%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.-rotate-90{
  --tw-rotate: -90deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.rotate-0{
  --tw-rotate: 0deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.rotate-180{
  --tw-rotate: 180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
/* ... */

